--- a/features/login/src/main/res/layout/fragment_login.xml
+++ b/features/login/src/main/res/layout/fragment_login.xml
@@ -67,6 +67,7 @@
             android:backgroundTint="@color/colorWhite"
             android:hint="@string/id_placeholder"
             android:paddingBottom="20dp"
+            android:singleLine="true"
             android:text="@={vm.id}"
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGray"
@@ -85,6 +86,7 @@
             android:hint="@string/password_placeholder"
             android:inputType="textPassword"
             android:paddingBottom="20dp"
+            android:singleLine="true"
             android:text="@={vm.password}"
             android:textColor="@color/colorWhite"
             android:textColorHint="@color/colorGray"
