--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -35,7 +35,7 @@
 
     <fragment
         android:id="@+id/signupFragment"
-        android:name="com.az.signup.SignupFragment"
+        android:name="com.az.signup.view.SignupFragment"
         android:label="SignupFragment"
         app:moduleName="signup">
 
