--- a/features/signup/src/main/res/drawable/bg_rounded_button_red_border.xml
+++ b/features/signup/src/main/res/drawable/bg_rounded_button_red_border.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="18dp"/>
-    <stroke android:color="@color/colorRed" android:width="1dp"/>
+    <corners android:radius="10dp" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/colorRed" />
 </shape>
