--- a/features/signup/src/main/res/drawable/bg_rounded_button_white_border.xml
+++ b/features/signup/src/main/res/drawable/bg_rounded_button_white_border.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="18dp"/>
-    <stroke android:color="@color/colorWhite" android:width="1dp"/>
+    <corners android:radius="10dp" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/colorCoolGray" />
+    <solid android:color="@color/colorDarkGray" />
 </shape>
