--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -11,164 +11,170 @@
             type="com.az.main.viewmodel.MainViewModel" />
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorSemiBlack">
+        bind:isRefreshing="@{vm.isRefreshing}">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:background="@color/colorSemiBlack">
 
-            <TextView
-                android:id="@+id/user_grade"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="37dp"
-                android:fontFamily="@font/sdgnh"
-                android:gravity="center"
-                android:textColor="@color/colorWhite"
-                android:textSize="30sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                bind:conciergeGrade="@{vm.userRating.ratingForPromotion.message}"
-                tools:text="어이신입ㅋ" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/user_grade_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/app_main_font"
-                android:gravity="center"
-                android:textColor="@color/colorWhite"
-                android:textSize="30sp"
-                app:layout_constraintStart_toStartOf="@id/user_grade"
-                app:layout_constraintTop_toBottomOf="@id/user_grade"
-                bind:conciergeMessage="@{vm.userRating.ratingForPromotion.message}"
-                tools:text="유머 좀 하나?" />
+                <TextView
+                    android:id="@+id/user_grade"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="37dp"
+                    android:fontFamily="@font/sdgnh"
+                    android:gravity="center"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="30sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    bind:conciergeGrade="@{vm.userRating.ratingForPromotion.message}"
+                    tools:text="어이신입ㅋ" />
 
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="0dp"
-                android:src="@drawable/ic_sinip_sticker"
-                app:layout_constraintBottom_toBottomOf="@id/user_grade_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/user_grade" />
+                <TextView
+                    android:id="@+id/user_grade_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/app_main_font"
+                    android:gravity="center"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="30sp"
+                    app:layout_constraintStart_toStartOf="@id/user_grade"
+                    app:layout_constraintTop_toBottomOf="@id/user_grade"
+                    bind:conciergeMessage="@{vm.userRating.ratingForPromotion.message}"
+                    tools:text="유머 좀 하나?" />
 
-            <TextView
-                android:id="@+id/post_number_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="37dp"
-                android:background="@drawable/bg_humor_grade_button_main"
-                android:fontFamily="@font/app_main_font"
-                android:gravity="center"
-                android:paddingHorizontal="9dp"
-                android:paddingVertical="3dp"
-                android:text="@string/post"
-                android:textColor="@color/colorWarmGray"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@id/user_grade"
-                app:layout_constraintTop_toBottomOf="@id/user_grade_text" />
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="0dp"
+                    android:src="@drawable/ic_sinip_sticker"
+                    app:layout_constraintBottom_toBottomOf="@id/user_grade_text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/user_grade" />
 
-            <TextView
-                android:id="@+id/post_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:fontFamily="@font/app_main_font"
-                android:text="@{@string/count(vm.userRating.ratingForPromotion.postCountForPromotion)}"
-                android:textColor="@color/colorWhite"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@id/post_number_text"
-                app:layout_constraintStart_toEndOf="@id/post_number_text"
-                app:layout_constraintTop_toTopOf="@id/post_number_text"
-                tools:text="14개" />
+                <TextView
+                    android:id="@+id/post_number_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="37dp"
+                    android:background="@drawable/bg_humor_grade_button_main"
+                    android:fontFamily="@font/app_main_font"
+                    android:gravity="center"
+                    android:paddingHorizontal="9dp"
+                    android:paddingVertical="3dp"
+                    android:text="@string/post"
+                    android:textColor="@color/colorWarmGray"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="@id/user_grade"
+                    app:layout_constraintTop_toBottomOf="@id/user_grade_text" />
 
-            <TextView
-                android:id="@+id/comment_number_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:background="@drawable/bg_humor_grade_button_main"
-                android:fontFamily="@font/app_main_font"
-                android:gravity="center"
-                android:paddingHorizontal="9dp"
-                android:paddingVertical="3dp"
-                android:text="@string/comment"
-                android:textColor="@color/colorWarmGray"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@id/post_number_text"
-                app:layout_constraintStart_toEndOf="@id/post_number"
-                app:layout_constraintTop_toTopOf="@id/post_number_text" />
+                <TextView
+                    android:id="@+id/post_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
+                    android:fontFamily="@font/app_main_font"
+                    android:text="@{@string/count(vm.userRating.ratingForPromotion.postCountForPromotion)}"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/post_number_text"
+                    app:layout_constraintStart_toEndOf="@id/post_number_text"
+                    app:layout_constraintTop_toTopOf="@id/post_number_text"
+                    tools:text="14개" />
 
-            <TextView
-                android:id="@+id/comment_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:fontFamily="@font/app_main_font"
-                android:text="@{@string/count(vm.userRating.ratingForPromotion.commentCountForPromotion)}"
-                android:textColor="@color/colorWhite"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@id/comment_number_text"
-                app:layout_constraintStart_toEndOf="@id/comment_number_text"
-                app:layout_constraintTop_toTopOf="@id/comment_number_text"
-                tools:text="4개" />
+                <TextView
+                    android:id="@+id/comment_number_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:background="@drawable/bg_humor_grade_button_main"
+                    android:fontFamily="@font/app_main_font"
+                    android:gravity="center"
+                    android:paddingHorizontal="9dp"
+                    android:paddingVertical="3dp"
+                    android:text="@string/comment"
+                    android:textColor="@color/colorWarmGray"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/post_number_text"
+                    app:layout_constraintStart_toEndOf="@id/post_number"
+                    app:layout_constraintTop_toTopOf="@id/post_number_text" />
 
-            <TextView
-                android:id="@+id/humor_count_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:fontFamily="@font/app_main_font"
-                android:text="@string/humor_count_text"
-                android:textColor="@color/colorWarmGray"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@id/comment_number"
-                app:layout_constraintStart_toEndOf="@id/comment_number"
-                app:layout_constraintTop_toTopOf="@id/comment_number" />
+                <TextView
+                    android:id="@+id/comment_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
+                    android:fontFamily="@font/app_main_font"
+                    android:text="@{@string/count(vm.userRating.ratingForPromotion.commentCountForPromotion)}"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/comment_number_text"
+                    app:layout_constraintStart_toEndOf="@id/comment_number_text"
+                    app:layout_constraintTop_toTopOf="@id/comment_number_text"
+                    tools:text="4개" />
 
-            <ProgressBar
-                style="@style/HumorGradeProgressbar"
-                android:layout_width="0dp"
-                android:layout_height="9dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="9dp"
-                android:layout_marginBottom="42dp"
-                android:max="1000"
-                android:progressDrawable="@drawable/humor_grade_progressbar"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/post_number_text"
-                bind:humorGradeProgress="@{vm.userRating.ratingForPromotion.progress}"
-                tools:progress="700" />
+                <TextView
+                    android:id="@+id/humor_count_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:fontFamily="@font/app_main_font"
+                    android:text="@string/humor_count_text"
+                    android:textColor="@color/colorWarmGray"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="@id/comment_number"
+                    app:layout_constraintStart_toEndOf="@id/comment_number"
+                    app:layout_constraintTop_toTopOf="@id/comment_number" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <ProgressBar
+                    style="@style/HumorGradeProgressbar"
+                    android:layout_width="0dp"
+                    android:layout_height="9dp"
+                    android:layout_marginHorizontal="30dp"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginBottom="42dp"
+                    android:max="1000"
+                    android:progressDrawable="@drawable/humor_grade_progressbar"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/post_number_text"
+                    bind:humorGradeProgress="@{vm.userRating.ratingForPromotion.progress}"
+                    tools:progress="700" />
 
-        <include
-            android:id="@+id/bottom_sheet_include"
-            layout="@layout/bottom_sheet_main"
-            bind:humors="@{vm.humors}"
-            bind:isFame="@{vm.isHumorsFame}"
-            bind:vm="@{vm}" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_create_humor"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="24dp"
-            android:elevation="8dp"
-            android:src="@drawable/ic_create_post"
-            app:backgroundTint="@color/colorPurple"
-            app:pressedTranslationZ="10dp" />
+            <include
+                android:id="@+id/bottom_sheet_include"
+                layout="@layout/bottom_sheet_main"
+                bind:vm="@{vm}" />
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_create_humor"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="24dp"
+                android:elevation="8dp"
+                android:src="@drawable/ic_create_post"
+                app:backgroundTint="@color/colorPurple"
+                app:pressedTranslationZ="10dp" />
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
