--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -51,6 +51,7 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="0dp"
+                android:onClick="@{() -> vm.refreshMainPage()}"
                 android:src="@drawable/ic_sinip_sticker"
                 app:layout_constraintBottom_toBottomOf="@id/user_grade_text"
                 app:layout_constraintEnd_toEndOf="parent"
