YTG-#51 [메인][리팩토링] 메인모듈 코드 에러처리 부분 리팩토링

--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -165,6 +165,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="24dp"
             android:elevation="8dp"
+            android:onClick="@{() -> vm.createPage()}"
             android:src="@drawable/ic_create_post"
             app:backgroundTint="@color/colorPurple"
             app:pressedTranslationZ="10dp" />
