YTG-#51 [상세페이지][리팩토링] 상세페이지 모듈 코드 리팩토링

--- a/features/details/src/main/res/layout/fragment_details.xml
+++ b/features/details/src/main/res/layout/fragment_details.xml
@@ -34,8 +34,7 @@
                 <include
                     android:id="@+id/contents_detail_include"
                     layout="@layout/layout_contents_detail"
-                    bind:detail="@{vm.details}"
-                    bind:listener="@{vm.listener}" />
+                    bind:vm="@{vm}" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/comments_rv"
