YTG-#51 [상세페이지][프로필] 댓글 작성자의 등급에 따라 프로필 바뀌는 기능 추가

--- a/features/details/src/main/res/layout/item_comments.xml
+++ b/features/details/src/main/res/layout/item_comments.xml
@@ -24,9 +24,10 @@
             android:layout_width="27dp"
             android:layout_height="26dp"
             android:layout_marginTop="5dp"
-            android:src="@drawable/ic_profile"
+            android:src="@drawable/ic_profile_sinip"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            bind:gradeForProfile="@{commentItem.writer.rating}" />
 
         <TextView
             android:id="@+id/user_name"
