YTG-#51 [메인페이지][스티커] 로그인한 사용자의 등급에 따라 메인페이지 스티커 바뀌는 기능 추가

--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -52,10 +52,11 @@
                 android:layout_width="60dp"
                 android:layout_height="0dp"
                 android:onClick="@{() -> vm.refreshMainPage()}"
-                android:src="@drawable/ic_sinip_sticker"
+                android:src="@drawable/ic_sticker_main_sinip"
                 app:layout_constraintBottom_toBottomOf="@id/user_grade_text"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/user_grade" />
+                app:layout_constraintTop_toTopOf="@id/user_grade"
+                bind:gradeForMainSticker="@{vm.userRating.ratingForPromotion.currentRating}" />
 
             <TextView
                 android:id="@+id/post_number_text"
