--- a/features/details/src/main/res/layout/fragment_details.xml
+++ b/features/details/src/main/res/layout/fragment_details.xml
@@ -88,12 +88,11 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <Button
+                <ImageView
                     android:id="@+id/btn_comment_send"
                     android:layout_width="28dp"
                     android:layout_height="28dp"
                     android:background="@drawable/btn_comment_send"
-                    android:button="@null"
                     bind:textToSend="@{vm.comment}" />
             </LinearLayout>
 
