YTG-#12 [마이페이지][탭별 아이템] 마이페이지 기능 개발

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -68,6 +68,12 @@
         android:label="MyPageFragment"
         app:moduleName="mypage">
 
+        <action
+            android:id="@+id/action_logout"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true"/>
+
     </fragment>
 
     <fragment
