--- a/features/mypage/src/main/res/layout/layout_bottom_sheet.xml
+++ b/features/mypage/src/main/res/layout/layout_bottom_sheet.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="vm"
+            type="com.az.mypage.ui.viewModel.MyPageViewModel" />
+
+        <variable
+            name="items"
+            type="java.util.List&lt;com.az.model.BaseDataInterface&gt;" />
+
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -28,7 +41,9 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_header_dash" />
+            app:layout_constraintTop_toBottomOf="@id/view_header_dash"
+            bind:setItems="@{items}"
+            bind:setViewType="@{vm.selectItemCode}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
